--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 10
+  mvc:
+    pathmatch:
+      matching-strategy=ant_path_matcher: ant_path_matcher
   jpa:
     hibernate:
       ddl-auto: update
@@ -14,3 +17,8 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
